--- a/spatial_analysis/spatial_analysis.ipynb
+++ b/spatial_analysis/spatial_analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -197,7 +197,11 @@
     "\n",
     "#List of tokens of interest to perform iteration operations:\n",
     "tokens_lst = ['cafe', 'coffee', 'pizza', 'wine', 'sushi', 'thai', 'chicken', \n",
-    "                   'fried', 'fish', 'kebab', 'costcutter', 'waitrose', 'sainsburys', 'tesco']\n",
+    "                   'fried', 'fish', 'kebab', 'costcutter', 'waitrose', 'sainsburys', 'tesco', 'grill']\n",
+    "\n",
+    "#Colour codes to associate with each token\n",
+    "tokens_color = ['#9fc54d', '#75c156', '#33a457', '#71b67b', '#61bdf0', '#1e71b8', '#e03c00', \n",
+    "                '#e56000', '#f08c00', '#ffea00', '#18563e', '#729f1e', '#ee7a01', '#0053a0', '#1ea86c']\n",
     "\n",
     "df = {}\n",
     "\n",
@@ -207,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -239,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -267,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -302,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -331,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -354,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -378,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -397,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -409,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -443,14 +447,19 @@
     "            B = (230-(x*increment))\n",
     "\n",
     "        if c == 'g':        \n",
-    "            R= (230-(x*increment))\n",
-    "            G= (255-(x/2*increment))\n",
-    "            B= (230-(x*increment))\n",
+    "            R = (230-(x*increment))\n",
+    "            G = (255-(x/2*increment))\n",
+    "            B = (230-(x*increment))\n",
     "\n",
-    "        if c == 'p':        k\n",
+    "        if c == 'p':        \n",
+    "            R = (230-(x/4*increment))\n",
+    "            G = (230-(x*increment))\n",
+    "            B = 255\n",
+    "            \n",
+    "        if c == 'b':        \n",
     "            R = (230-(x*increment))\n",
     "            G = (230-(x*increment))\n",
-    "            B = 255           \n",
+    "            B = 255\n",
     "            \n",
     "        RGB_tuples.append((R,G,B))\n",
     "\n",
@@ -472,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -492,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -518,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -535,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -567,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -602,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -693,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -715,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -744,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -779,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -794,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -861,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -940,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -955,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -969,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -1019,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -1056,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -1159,6 +1168,12 @@
        "      <td>0.00000</td>\n",
        "      <td>0.626</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>grill</th>\n",
+       "      <td>-0.001603</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.578</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -1178,10 +1193,11 @@
        "costcutter  -0.001603  0.00000        0.443\n",
        "waitrose    -0.001603  0.00000        0.538\n",
        "sainsburys  -0.001603  0.00000        0.329\n",
-       "tesco       -0.001603  0.00000        0.626"
+       "tesco       -0.001603  0.00000        0.626\n",
+       "grill       -0.001603  0.00000        0.578"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1192,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -1211,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -1231,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -1265,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
@@ -1307,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -1349,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -1365,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
@@ -1381,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -1514,6 +1530,14 @@
        "      <td>-0.062816</td>\n",
        "      <td>-0.078366</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>grill</th>\n",
+       "      <td>-0.001603</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.578</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -1534,6 +1558,7 @@
        "waitrose    -0.001603  0.00000        0.538            0.334962   \n",
        "sainsburys  -0.001603  0.00000        0.329            0.026971   \n",
        "tesco       -0.001603  0.00000        0.626           -0.062816   \n",
+       "grill       -0.001603  0.00000        0.578                 NaN   \n",
        "\n",
        "            professional_pct_correlation  \n",
        "cafe                            0.088544  \n",
@@ -1549,10 +1574,11 @@
        "costcutter                     -0.211807  \n",
        "waitrose                        0.326170  \n",
        "sainsburys                      0.011479  \n",
-       "tesco                          -0.078366  "
+       "tesco                          -0.078366  \n",
+       "grill                                NaN  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1570,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -1618,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
@@ -1653,7 +1679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
@@ -1692,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -1738,7 +1764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
@@ -1774,6 +1800,7 @@
        " 'waitrose_count',\n",
        " 'sainsburys_count',\n",
        " 'tesco_count',\n",
+       " 'grill_count',\n",
        " 'cafe_kde',\n",
        " 'coffee_kde',\n",
        " 'pizza_kde',\n",
@@ -1788,6 +1815,7 @@
        " 'waitrose_kde',\n",
        " 'sainsburys_kde',\n",
        " 'tesco_kde',\n",
+       " 'grill_kde',\n",
        " 'all_business_count',\n",
        " 'cafe_lq',\n",
        " 'coffee_lq',\n",
@@ -1803,6 +1831,7 @@
        " 'waitrose_lq',\n",
        " 'sainsburys_lq',\n",
        " 'tesco_lq',\n",
+       " 'grill_lq',\n",
        " 'all_business_kde',\n",
        " 'cafe_smooth_lq',\n",
        " 'coffee_smooth_lq',\n",
@@ -1818,6 +1847,7 @@
        " 'waitrose_smooth_lq',\n",
        " 'sainsburys_smooth_lq',\n",
        " 'tesco_smooth_lq',\n",
+       " 'grill_smooth_lq',\n",
        " 'cafe_smooth_lq_color',\n",
        " 'coffee_smooth_lq_color',\n",
        " 'pizza_smooth_lq_color',\n",
@@ -1832,6 +1862,7 @@
        " 'waitrose_smooth_lq_color',\n",
        " 'sainsburys_smooth_lq_color',\n",
        " 'tesco_smooth_lq_color',\n",
+       " 'grill_smooth_lq_color',\n",
        " 'cafe_lmoran_value',\n",
        " 'cafe_lmoran_p',\n",
        " 'coffee_lmoran_value',\n",
@@ -1860,6 +1891,8 @@
        " 'sainsburys_lmoran_p',\n",
        " 'tesco_lmoran_value',\n",
        " 'tesco_lmoran_p',\n",
+       " 'grill_lmoran_value',\n",
+       " 'grill_lmoran_p',\n",
        " 'cafe_morans_color',\n",
        " 'coffee_morans_color',\n",
        " 'pizza_morans_color',\n",
@@ -1874,6 +1907,7 @@
        " 'waitrose_morans_color',\n",
        " 'sainsburys_morans_color',\n",
        " 'tesco_morans_color',\n",
+       " 'grill_morans_color',\n",
        " 'cafe_income_residuals',\n",
        " 'coffee_income_residuals',\n",
        " 'pizza_income_residuals',\n",
@@ -1888,6 +1922,7 @@
        " 'waitrose_income_residuals',\n",
        " 'sainsburys_income_residuals',\n",
        " 'tesco_income_residuals',\n",
+       " 'grill_income_residuals',\n",
        " 'cafe_professionals_pct_residuals',\n",
        " 'coffee_professionals_pct_residuals',\n",
        " 'pizza_professionals_pct_residuals',\n",
@@ -1902,6 +1937,7 @@
        " 'waitrose_professionals_pct_residuals',\n",
        " 'sainsburys_professionals_pct_residuals',\n",
        " 'tesco_professionals_pct_residuals',\n",
+       " 'grill_professionals_pct_residuals',\n",
        " 'cafe_income_professionals_residuals',\n",
        " 'coffee_income_professionals_residuals',\n",
        " 'pizza_income_professionals_residuals',\n",
@@ -1915,10 +1951,54 @@
        " 'costcutter_income_professionals_residuals',\n",
        " 'waitrose_income_professionals_residuals',\n",
        " 'sainsburys_income_professionals_residuals',\n",
-       " 'tesco_income_professionals_residuals']"
+       " 'tesco_income_professionals_residuals',\n",
+       " 'grill_income_professionals_residuals',\n",
+       " 'ag_clustersincome_coffee0',\n",
+       " 'ag_clustersincome_coffee1',\n",
+       " 'ag_clustersincome_coffee2',\n",
+       " 'ag_clustersincome_coffee3',\n",
+       " 'ag_clustersincome_coffee4',\n",
+       " 'ag_clustersincome_coffee5',\n",
+       " 'ag_clustersincome_coffee6',\n",
+       " 'ag_clustersincome_chicken0',\n",
+       " 'ag_clustersincome_chicken1',\n",
+       " 'ag_clustersincome_chicken2',\n",
+       " 'ag_clustersincome_chicken3',\n",
+       " 'ag_clustersincome_chicken4',\n",
+       " 'ag_clustersincome_chicken5',\n",
+       " 'ag_clustersincome_chicken6',\n",
+       " 'ag_clusterscoffee_chicken0',\n",
+       " 'ag_clusterscoffee_chicken1',\n",
+       " 'ag_clusterscoffee_chicken2',\n",
+       " 'ag_clusterscoffee_chicken3',\n",
+       " 'ag_clusterscoffee_chicken4',\n",
+       " 'ag_clusterscoffee_chicken5',\n",
+       " 'ag_clusterscoffee_chicken6',\n",
+       " 'ag_clustersincome_coffee_chicken0',\n",
+       " 'ag_clustersincome_coffee_chicken1',\n",
+       " 'ag_clustersincome_coffee_chicken2',\n",
+       " 'ag_clustersincome_coffee_chicken3',\n",
+       " 'ag_clustersincome_coffee_chicken4',\n",
+       " 'ag_clustersincome_coffee_chicken5',\n",
+       " 'ag_clustersincome_coffee_chicken6',\n",
+       " 'ag_clustersincome_coffee_chicken_thai_kebab0',\n",
+       " 'ag_clustersincome_coffee_chicken_thai_kebab1',\n",
+       " 'ag_clustersincome_coffee_chicken_thai_kebab2',\n",
+       " 'ag_clustersincome_coffee_chicken_thai_kebab3',\n",
+       " 'ag_clustersincome_coffee_chicken_thai_kebab4',\n",
+       " 'ag_clustersincome_coffee_chicken_thai_kebab5',\n",
+       " 'ag_clustersincome_coffee_chicken_thai_kebab6',\n",
+       " 'ag_clusterscoffee_chicken_thai_kebab0',\n",
+       " 'ag_clusterscoffee_chicken_thai_kebab1',\n",
+       " 'ag_clusterscoffee_chicken_thai_kebab2',\n",
+       " 'ag_clusterscoffee_chicken_thai_kebab3',\n",
+       " 'ag_clusterscoffee_chicken_thai_kebab4',\n",
+       " 'ag_clusterscoffee_chicken_thai_kebab5',\n",
+       " 'ag_clusterscoffee_chicken_thai_kebab6',\n",
+       " 'cluster_colors']"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1929,7 +2009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false
    },
@@ -1984,7 +2064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false
    },
@@ -2056,7 +2136,7 @@
        "Name: ag_clustersincome_coffee_chicken_thai_kebab3, dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2067,7 +2147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false
    },
@@ -2169,7 +2249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 79,
    "metadata": {
     "collapsed": true
    },
@@ -2198,13 +2278,13 @@
    "source": [
     "#Scatter Plots\n",
     "\n",
-    "for i in tokens_lst:\n",
+    "for i in range(len(tokens_lst)):\n",
     "\n",
     "    fig = plt.figure()\n",
     "    ax = fig.add_subplot(111)\n",
     "\n",
     "    y = ward_variables['med_income_2012_13']\n",
-    "    x = ward_variables[i + '_smooth_lq']\n",
+    "    x = ward_variables[tokens_lst[i] + '_smooth_lq']\n",
     "\n",
     "    plt.setp(ax.get_xticklabels(), fontsize=8)\n",
     "    plt.setp(ax.get_yticklabels(), fontsize=8)\n",
@@ -2214,7 +2294,7 @@
     "    plt.plot(x, m*x + b, '-', c='red')\n",
     "    ax.patch.set_alpha(0)\n",
     "\n",
-    "    plt.title(\"Density of Token '\" + i + \"' by Income per Ward\", weight = 'normal', y=1.05)\n",
+    "    plt.title(\"Density of Token '\" + tokens_lst[i] + \"' by Income per Ward\", weight = 'normal', y=1.05)\n",
     "    plt.xlabel(\"Density (Location Quotient)\")\n",
     "    plt.ylabel('Income ($)')\n",
     "\n",
@@ -2222,7 +2302,7 @@
     "    plt.xlim(xmin = 0)\n",
     "    plt.ylim(20000,90000)\n",
     "    \n",
-    "    fig.savefig('spatial_analysis/figures/scatter_plot/' + i + '_income_scatter.png', dpi=200, figsize = (12,8),\n",
+    "    fig.savefig('spatial_analysis/figures/scatter_plot/' + tokens_lst[i] + '_income_scatter.png', dpi=200, figsize = (12,8),\n",
     "                   transparent = True)\n",
     "\n"
    ]
