--- a/spatial_analysis/spatial_analysis.ipynb
+++ b/spatial_analysis/spatial_analysis.ipynb
@@ -2270,7 +2270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false
    },
@@ -2289,13 +2289,13 @@
     "    plt.setp(ax.get_xticklabels(), fontsize=8)\n",
     "    plt.setp(ax.get_yticklabels(), fontsize=8)\n",
     "\n",
-    "    scatter = plt.scatter(x, y, marker='^', color = 'purple') \n",
+    "    scatter = plt.scatter(x, y, marker='^', color = tokens_color[i]) \n",
     "    m, b = np.polyfit(x, y, deg=1)\n",
     "    plt.plot(x, m*x + b, '-', c='red')\n",
     "    ax.patch.set_alpha(0)\n",
     "\n",
     "    plt.title(\"Density of Token '\" + tokens_lst[i] + \"' by Income per Ward\", weight = 'normal', y=1.05)\n",
-    "    plt.xlabel(\"Density (Location Quotient)\")\n",
+    "    plt.xlabel(\"Location Quotient\")\n",
     "    plt.ylabel('Income ($)')\n",
     "\n",
     "\n",
@@ -2309,7 +2309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 83,
    "metadata": {
     "collapsed": false
    },
@@ -2318,25 +2318,25 @@
     "#Histograms\n",
     "\n",
     "\n",
-    "for i in tokens_lst:\n",
+    "for i in range (len(tokens_lst)):\n",
     "    fig = plt.figure()\n",
     "    ax = fig.add_subplot(111)\n",
     "\n",
-    "    x = ward_variables[i + '_smooth_lq']\n",
+    "    x = ward_variables[tokens_lst[i]  + '_smooth_lq']\n",
     "\n",
     "    plt.setp(ax.get_xticklabels(), fontsize=8)\n",
     "    plt.setp(ax.get_yticklabels(), fontsize=8)\n",
-    "    n, bins, patches = plt.hist(x, 50, normed=1, facecolor='purple', alpha=0.75) \n",
+    "    n, bins, patches = plt.hist(x, 50, normed=1, facecolor=tokens_color[i], alpha=0.75) \n",
     "    ax.patch.set_alpha(0)\n",
     "\n",
-    "    plt.title(\"Histogram of Density of Token '\" + i + \"' per Ward\", weight = 'normal', y=1.05)\n",
-    "    plt.xlabel(\"Density (Location Quotient)\")\n",
+    "    plt.title(\"Histogram of Density of Token '\" + tokens_lst[i]  + \"' per Ward\", weight = 'normal', y=1.05)\n",
+    "    plt.xlabel(\"Location Quotient\")\n",
     "    plt.ylabel('Probability')\n",
     "\n",
     "\n",
     "    #plt.show()\n",
     "\n",
-    "    fig.savefig('spatial_analysis/figures/histogram/' + i + '_histogram.png', dpi=200, figsize = (12,8),\n",
+    "    fig.savefig('spatial_analysis/figures/histogram/' + tokens_lst[i] + '_histogram.png', dpi=200, figsize = (12,8),\n",
     "                       transparent = True)"
    ]
   },
